fix: use official Hysteria2 server
